--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
-v0.2.2 (10 Dec 2012)
+v0.2.3 (11 Dec 2012)
+	Replaces "errno-codes" dependency by "error-provider".
+
+v0.2.2 (11 Dec 2012)
 	Added "mode" and "start" to the "open()" parameters.
 	Added "writeln()".
 	Added "flush()".
