--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ v0.2.2 (11 Dec 2012)
 	Added "mode" and "start" to the "open()" parameters.
 	Added "writeln()".
 	Added "flush()".
+	Renamed "newLine()" by "line()".
 
 v0.2.1 (09 Dec 2012)
 	An INVALID_DATA error is emitted if the data to write is invalid.
